[package]
name = "sqs-load-tester"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
codegen-units = 1
debug = false
incremental = false
strip = true
lto = true
panic = "abort"

[dependencies]
tokio = { version = "1.43.0", features = [
    "macros",
    "rt-multi-thread",
    "time",
    "sync",
] }
