[package]
name = "sqs-load-tester"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
codegen-units = 1
debug = false
incremental = false
strip = true
lto = true
panic = "abort"

[dependencies]
anyhow = "1.0.95"
aws-config = { version = "1.5.13", features = ["behavior-version-latest"] }
aws-sdk-sqs = { version = "1.53.0", features = ["behavior-version-latest"] }
rand = { version = "0.8.5", features = [] }
tokio = { version = "1.43.0", features = [
    "macros",
    "rt-multi-thread",
    "time",
    "sync",
    "signal",
] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
